package com.yasser.githubusers.utils.const

object TestTag {
    const val SEARCH_TEXT_FIELD="SEARCH_TEXT_FIELD"
    const val LOADING_PROGRESS="LOADING_PROGRESS"
    const val USER_DETAILS="USER_DETAILS"
    const val USER_DETAILS_COLUMN="USER_DETAILS_COLUMN"
    const val USERS_COLUMN="USERS_COLUMN"
    const val USER_DETAILS_USER_NAME="USER_DETAILS_USER_NAME"
    const val FOLLOWING_BUTTON="FOLLOWING_BUTTON"
    const val FOLLOWER_BUTTON="FOLLOWER_BUTTON"
    const val TOP_BAR="TOP_BAR"
    const val USER_LAZY_COLUMN="USER_LAZY_COLUMN"
    const val BACK_BUTTON="BACK_BUTTON"
}